[tool.poetry]
name = "AAA-Tokenomics"
version = "0.1.0"
description = "Tokenomics Design for All Access Anonymous"
authors = ["Daniel Ahn, Bhargav Kakadiya, Johann Suarez, Jake Cassani, Nicholas O'Kelley"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

