[tool.poetry]
name = "AAA"
version = "0.1.0"
description = ""
authors = ["Barghav Kakadiya, Daniel Ahn, Nicholas O'kelley, Jake Cassani, Johann Suarez"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.0"
numpy = "^1.22.2"
colorama = "^0.4.4"
colorlog = "^6.6.0"
pydantic = "^1.9.0"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.scripts]
run = "aaa.main:run_sim"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.0"
python-dotenv = "^0.19.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
