[metadata]
name = aaa-defi-ltf
version = 0.0.1
author = BK
author_email = bk@longtailfinancial.com
description = AAA defi modelling based on Olympous
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/longtailfinancial/aaa-tokenomics/tree/defi-model
project_urls =
    Bug Tracker = https://github.com/longtailfinancial/aaa-tokenomics/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src