[metadata]
name = aaa-defi
version = 0.0.1
author = BK
author_email = bk@longtailfinancial.com
description = AAA defi modelling based on Olympous
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/longtailfinancial/aaa-tokenomics/tree/defi-model
project_urls =
    Bug Tracker = https://github.com/longtailfinancial/aaa-tokenomics/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
    numpy==1.22.3
    pandas==1.4.1
    plotly==5.6.0
    python-dateutil==2.8.2
    pytz==2022.1
    six==1.16.0
    tenacity==8.0.1