[metadata]
name = aaa
version  = 0.0.1
author = Daniel Ahn
author_email = daniel@longtailfinancial.com 
description = Modelling AAA tokenomics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/longtailfinancial/aaa-tokenomics
classifiers =
   Programming Language :: Python :: 3
   License :: OSI Approved :: MIT License
   Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.10
install_requires =
	alabaster==0.7.12
	asttokens==2.0.5
	attrs==21.4.0
	autopep8==1.6.0
	Babel==2.9.1
	backcall==0.2.0
	bleach==4.1.0
	build==0.7.0
	certifi==2021.10.8
	cffi==1.15.0
	charset-normalizer==2.0.11
	colorama==0.4.4
	colorlog==6.6.0
	cryptography==36.0.1
	debugpy==1.6.0
	decorator==5.1.1
	docutils==0.17.1
	entrypoints==0.4
	executing==0.8.3
	fastjsonschema==2.15.3
	flake8==4.0.1
	idna==3.3
	imagesize==1.3.0
	importlib-metadata==4.11.1
	iniconfig==1.1.1
	ipykernel==6.12.1
	ipython==8.2.0
	jedi==0.18.1
	jeepney==0.7.1
	Jinja2==3.0.3
	jsonschema==4.4.0
	jupyter-client==7.2.2
	jupyter-core==4.9.2
	keyring==23.5.0
	ltf==2021.10.dev2
	MarkupSafe==2.0.1
	matplotlib-inline==0.1.3
	mccabe==0.6.1
	nbformat==5.3.0
	nest-asyncio==1.5.5
	numpy==1.22.3
	packaging==21.3
	pandas==1.4.1
	parso==0.8.3
	pep517==0.12.0
	pexpect==4.8.0
	pickleshare==0.7.5
	pkginfo==1.8.2
	plotly==5.6.0
	pluggy==1.0.0
	prompt-toolkit==3.0.29
	psutil==5.9.0
	ptyprocess==0.7.0
	pure-eval==0.2.2
	pwlf==2.0.5
	py==1.11.0
	pycodestyle==2.8.0
	pycparser==2.21
	pydantic==1.9.0
	pyDOE==0.3.8
	pyflakes==2.4.0
	Pygments==2.11.2
	pyparsing==3.0.7
	pyrsistent==0.18.1
	pytest==7.0.0
	python-dateutil==2.8.2
	python-dotenv==0.19.2
	pytz==2022.1
	pyzmq==22.3.0
	readme-renderer==32.0
	requests==2.27.1
	requests-toolbelt==0.9.1
	rfc3986==2.0.0
	scipy==1.8.0
	SecretStorage==3.3.1
	six==1.16.0
	snowballstemmer==2.2.0
	Sphinx==4.4.0
	sphinx-rtd-theme==1.0.0
	sphinxcontrib-applehelp==1.0.2
	sphinxcontrib-devhelp==1.0.2
	sphinxcontrib-htmlhelp==2.0.0
	sphinxcontrib-jsmath==1.0.1
	sphinxcontrib-qthelp==1.0.3
	sphinxcontrib-serializinghtml==1.1.5
	stack-data==0.2.0
	tenacity==8.0.1
	toml==0.10.2
	tomli==2.0.1
	tornado==6.1
	tqdm==4.62.3
	traitlets==5.1.1
	twine==3.8.0
	typing_extensions==4.0.1
	urllib3==1.26.8
	wcwidth==0.2.5
	webencodings==0.5.1
	zipp==3.7.0
